--- a/package.json
+++ b/package.json
@@ -5,6 +5,9 @@
   "name": "nodet",
   "version": "1.0.0",
   "main": "index.js",
+  "engines": {
+    "node" : "14.x"
+  },
   "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
