--- a/package.json
+++ b/package.json
@@ -1,17 +1,17 @@
 {
   "dependencies": {
+    "express": "^4.18.2",
     "html2canvas-proxy": "^1.0.1"
   },
   "name": "nodet",
   "version": "1.0.0",
   "main": "index.js",
   "engines": {
-    "node" : "14.x"
+    "node": "14.x"
   },
-  "devDependencies": {},
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "repository": {
     "type": "git",
